--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
             
             <div class="footer-section">
                 <h3>Контакты</h3>
-                <p>Адрес: г. Москва, ул. Цифровая, 123</p>
-                <p>Телефон: +7 (999) 123-45-67</p>
+                <p>Адрес: г. Актобе, ул. Марьесева, 11</p>
+                <p>Телефон: +7 705 347 0061</p>
                 <p>Email: info@ict-expert.ru</p>
                 
                 <div class="social-links">
